<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/SettingsFragment">

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/settings_denomination_title"
                android:text="@string/settings_denomination_title"
                style="@style/SettingsTitle" />

            <RadioGroup
                android:id="@+id/settings_denomination_denomination_group"
                style="@style/SettingsGroup">

                <RadioButton
                    android:id="@+id/settings_denomination_buttons_bitcoin"
                    android:text="@string/settings_denomination_buttons_bitcoin"
                    style="@style/SettingsRadioItemFirst" />

                <RadioButton
                    android:id="@+id/settings_denomination_buttons_mbitcoin"
                    android:text="@string/settings_denomination_buttons_mbitcoin"
                    style="@style/SettingsRadioItem" />

                <RadioButton
                    android:id="@+id/settings_denomination_buttons_ubitcoin"
                    android:text="@string/settings_denomination_buttons_ubitcoin"
                    style="@style/SettingsRadioItem" />

            </RadioGroup>

            <TextView
                android:id="@+id/settings_account_title"
                android:text="@string/settings_account_title"
                style="@style/SettingsTitle" />

            <LinearLayout
                android:id="@+id/credentials_buttons"
                style="@style/SettingsGroup">

                <FrameLayout style="@style/SettingsRowFirst">
                    <Button
                        android:id="@+id/settings_button_change_password"
                        android:text="@string/settings_button_change_password"
                        style="@style/SettingsButton" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <Button
                        android:id="@+id/settings_button_pin"
                        android:text="@string/settings_button_pin"
                        style="@style/SettingsButton" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <Button
                        android:id="@+id/settings_button_recovery"
                        android:text="@string/settings_button_recovery"
                        style="@style/SettingsButton" />
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/settings_user_title"
                android:text="@string/settings_user_title"
                style="@style/SettingsTitle" />

            <LinearLayout
                android:id="@+id/user_buttons"
                style="@style/SettingsGroup">

                <FrameLayout style="@style/SettingsRowFirst">
                    <Switch
                        android:id="@+id/settings_toggle_send_user_info"
                        android:text="@string/settings_button_send_user_info"
                        style="@style/SettingsSwitch" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <com.airbitz.objects.LimitedEditText
                        android:id="@+id/settings_edit_first_name"
                        android:hint="@string/settings_edit_first_name"
                        android:background="@null"
                        style="@style/SettingsEditText" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <com.airbitz.objects.LimitedEditText
                        android:id="@+id/settings_edit_last_name"
                        android:hint="@string/settings_edit_last_name"
                        android:background="@null"
                        style="@style/SettingsEditText" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <com.airbitz.objects.LimitedEditText
                        android:id="@+id/settings_edit_nick_name"
                        android:hint="@string/settings_edit_nick_name"
                        android:background="@null"
                        style="@style/SettingsEditText" />
                </FrameLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/settings_general_title"
                android:text="@string/settings_options_title"
                style="@style/SettingsTitle" />

            <LinearLayout
                android:id="@+id/misc_views"
                style="@style/SettingsGroup">

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/SettingsRowFirst">

                    <TextView
                        android:id="@+id/settings_title_auto_logoff"
                        android:text="@string/settings_title_auto_logoff"
                        style="@style/SettingsSplitText" />

                    <Button
                        android:id="@+id/settings_button_auto_logoff"
                        style="@style/SettingsSplitButton" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/SettingsRow">

                    <TextView
                        android:id="@+id/settings_title_currency"
                        android:text="@string/settings_title_currency"
                        style="@style/SettingsSplitText" />

                    <Button
                        android:id="@+id/settings_button_currency"
                        style="@style/SettingsSplitButton" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/SettingsRow">

                    <TextView
                        android:id="@+id/settings_title_distance"
                        android:text="@string/settings_title_distance"
                        style="@style/SettingsSplitText" />

                    <Button
                        android:id="@+id/settings_button_distance"
                        style="@style/SettingsSplitButton" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/SettingsRow">

                    <TextView
                        android:id="@+id/settings_title_default_exchange"
                        android:text="@string/settings_exchange_text"
                        style="@style/SettingsSplitText" />

                    <Button
                        android:id="@+id/settings_button_default_exchange"
                        style="@style/SettingsSplitButton" />
                </LinearLayout>

                <FrameLayout style="@style/SettingsRow">
                    <Button
                        android:id="@+id/settings_button_category"
                        android:text="@string/settings_button_change_categories"
                        style="@style/SettingsButton" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <Button
                        android:id="@+id/settings_button_spending_limits"
                        android:text="@string/settings_button_change_spending_limits"
                        style="@style/SettingsButton" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <Button
                        android:id="@+id/settings_button_two_factor_authentication"
                        android:text="@string/settings_button_two_factor_authentication"
                        style="@style/SettingsButton" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <Switch
                        android:id="@+id/settings_toggle_merchant_mode"
                        android:text="@string/settings_title_merchant_mode"
                        style="@style/SettingsSwitch" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <Switch
                        android:id="@+id/settings_toggle_nfc"
                        android:text="@string/settings_title_nfc"
                        style="@style/SettingsSwitch" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <Switch
                        android:id="@+id/settings_toggle_ble"
                        android:text="@string/settings_title_ble"
                        style="@style/SettingsSwitch" />
                </FrameLayout>

                <FrameLayout style="@style/SettingsRow">
                    <Switch
                        android:id="@+id/settings_toggle_pin_login"
                        android:text="@string/settings_title_pin_login"
                        style="@style/SettingsSwitch" />
                </FrameLayout>

            </LinearLayout>

            <Button
                android:id="@+id/settings_button_debug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/btn_blue"
                android:padding="5dp"
                android:textAllCaps="false"
                android:text="@string/settings_button_debug"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/layout_toolbar_header" />

</FrameLayout>
