<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2">

            <com.airbitz.objects.CommonTextView
                android:id="@+id/button_restaurant"
                android:drawableLeft="@drawable/ic_category_restaurants"
                android:text="@string/restaurants"
                style="@style/CategoryButton"
                />

            <com.airbitz.objects.CommonTextView
                android:id="@+id/button_gift_cards"
                android:drawableLeft="@drawable/ic_category_gift_cards"
                android:text="@string/gift_cards"
                style="@style/CategoryButton"
                />

            <com.airbitz.objects.CommonTextView
                android:id="@+id/button_coffee_tea"
                android:drawableLeft="@drawable/ic_category_coffee_tea"
                android:text="@string/coffee_and_tea"
                style="@style/CategoryButton"
                />

            <com.airbitz.objects.CommonTextView
                android:id="@+id/button_electronics"
                android:drawableLeft="@drawable/ic_category_electronics"
                android:text="@string/electronics"
                style="@style/CategoryButton"
                />

            <com.airbitz.objects.CommonTextView
                android:id="@+id/button_atms"
                android:drawableLeft="@drawable/ic_category_atms"
                android:text="@string/atms"
                style="@style/CategoryButton"
                />

            <com.airbitz.objects.CommonTextView
                android:id="@+id/button_shopping"
                android:drawableLeft="@drawable/ic_category_shopping"
                android:text="@string/shopping"
                style="@style/CategoryButton"
                />

        </GridLayout>

        <com.airbitz.objects.CommonTextView
            android:id="@+id/button_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CategoryButton"
            android:text="@string/more_categories" />

    </LinearLayout>

    <com.airbitz.widgets.NoDefaultSpinner
        android:id="@+id/spinner_more_categories"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/transparent"
        android:visibility="invisible" />

</LinearLayout>

