<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    style="@style/SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:paddingTop="20dp"
            android:paddingBottom="84dp">

            <LinearLayout style="@style/SettingsGroup">

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/SettingsRow">

                    <TextView
                        android:text="@string/fragment_debug_version_title"
                        style="@style/SettingsSplitText" />
                    <TextView
                        android:id="@+id/debug_app_version_text"
                        style="@style/SettingsSplitText" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/SettingsRow">

                    <TextView
                        android:text="@string/fragment_debug_core_version_title"
                        style="@style/SettingsSplitText" />
                    <TextView
                        android:id="@+id/debug_core_version_text"
                        style="@style/SettingsSplitText" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    style="@style/SettingsRow">

                    <TextView
                        android:id="@+id/settings_title_auto_logoff"
                        android:text="@string/fragment_debug_network_title"
                        style="@style/SettingsSplitText" />

                    <TextView
                        android:id="@+id/debug_network_version_text"
                        style="@style/SettingsSplitText" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/fragment_debug_clear_watcher_button"
                android:text="@string/fragment_debug_clear_watcher_button"
                android:layout_marginBottom="20dp"
                style="@style/GreenButton" />

            <Button
                android:id="@+id/fragment_debug_upload_log_button"
                android:text="@string/fragment_debug_upload_log_files_button"
                android:layout_marginBottom="20dp"
                style="@style/GreenButton" />
        </LinearLayout>

    </ScrollView>

    <include layout="@layout/layout_toolbar_title" />

</FrameLayout>
