<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/fragment_send_layout_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        layout="@layout/fragment_camera_scan"
        />

    <LinearLayout
        android:id="@+id/fragment_send_buttons"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_frost"
        style="@style/SegmentedGroup">

        <Button
            android:id="@+id/fragment_send_button_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_send_transfer"
            style="@style/SegmentedButton" />

        <Button
            android:id="@+id/fragment_send_button_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_send_address"
            style="@style/SegmentedButton" />

        <Button
            android:id="@+id/fragment_send_button_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_send_photos"
            style="@style/SegmentedButton" />

        <Button
            android:id="@+id/fragment_send_button_flash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_send_flash"
            style="@style/SegmentedButton" />

    </LinearLayout>

    <ListView
        android:id="@+id/fragment_send_bluetooth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_send_buttons"
        android:visibility="visible" />

    <ListView
        android:id="@+id/fragment_send_transfer_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white"
        android:layout_below="@id/toolbar"
        android:visibility="invisible"/>

    <include layout="@layout/layout_toolbar_dropdown" />
</RelativeLayout>
