<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_twofactor_menu_container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <include layout="@layout/layout_toolbar_header" />

    <LinearLayout
        android:id="@+id/fragment_twofactor_menu_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            style="@style/BlackDropShadow"
            android:text="@string/fragment_twofactor_menu_scan_message"/>

        <com.airbitz.objects.HighlightOnPressButton
            android:id="@+id/fragment_twofactor_menu_button_scan_token"
            style="@style/BlackDropShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:text="@string/fragment_twofactor_menu_button_scan_token"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            style="@style/BlackDropShadow"
            android:text="@string/fragment_twofactor_menu_request_message"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/fragment_twofactor_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                style="@style/BlackDropShadow"
                android:layout_centerInParent="true"
                android:text="@string/fragment_two_factor_menu_requested"/>

            <com.airbitz.objects.HighlightOnPressButton
                android:id="@+id/fragment_twofactor_menu_button_request_reset"
                style="@style/BlackDropShadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@drawable/btn_green"
                android:text="@string/fragment_twofactor_menu_button_request_reset"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/fragment_twofactor_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            style="@style/BlackDropShadow"
            android:text="Date"/>

    </LinearLayout>
</RelativeLayout>
